--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Мой Магазин</title>
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script>
+    // --- АДРЕС ВАШЕГО API ---
+    // !!! ЗАМЕНИТЕ ЭТОТ АДРЕС НА ПУБЛИЧНЫЙ HTTPS-АДРЕС ВАШЕГО РАЗМЕЩЕННОГО СЕРВЕРА !!!
+    const API_URL = 'https://telegram-store-app.vercel.app/'; 
+    // ----------------------------
+    
+    // ... остальной код loadProducts() и displayProducts() остается без изменений
+</script>
     <style>
         body {
             font-family: Arial, sans-serif;
